Legger til arbeidstid for utvidet periode ved dødsfallet og justerer opp fraværet til 100% (#6168)